# edgeai-lab12

./: .gitignore  Dockerfile.ci  README.md  entrypoint.sh  inference_node.py  pyproject.toml  requirements.txt  validate_step0.sh  validate_step1.sh  validate_step2.sh  validate_step3.sh  validate_step4.sh  validate_step5.sh  實作流程.md
.github/workflows/: ci.yml
tests/: test_smoke.py
